# spudplate

./: .clang-format  .clang-tidy  .gitignore  .tool-versions  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: cli.md  footer.html  getting-started.md  index.md  spudpack-format.md  syntax.md
docs/lang/: best-practices.md  examples.md  index.md  lexical.md  paths.md  pitfalls.md  scoping.md  statements.md  types-and-expressions.md
docs/lang/statements/: ask.md  copy.md  file.md  if.md  include.md  index.md  let.md  mkdir.md  repeat.md  run.md
include/spudplate/: asset_bundler.h  ast.h  binary_serializer.h  bundler.h  cli.h  cli_internal.h  crc32.h  interpreter.h  lexer.h  parser.h  serializer.h  spudpack.h  token.h  validator.h
src/: asset_bundler.cpp  binary_serializer.cpp  bundler.cpp  cli.cpp  crc32.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  serializer.cpp  spudpack.cpp  validator.cpp
tests/: asset_bundler_test.cpp  binary_serializer_test.cpp  bundler_test.cpp  cli_test.cpp  crc32_test.cpp  interpreter_test.cpp  lexer_test.cpp  parser_test.cpp  serializer_test.cpp  spudpack_test.cpp  test_helpers.cpp  test_helpers.h  validator_test.cpp
